# RGBD_Geometric_Correspondence_Consistency

./: CMakeLists.txt  RANSAC_Iterations_From_New_Outlier_Ratio.m  README.md  method_1Loop.m
GDC_Filter/: GDC_Filter_main.m  GT_Constructions_ICL_Dataset.m  get_ICL_NUIM_rgb_depth_lists.m  load_ICL_NUIM_Sequence_Data_Pair.m  pass_GDC_Filter.m
GT_Constructions/: Outlier_Ratio_Data_by_Ranges.mat  Outlier_Ratio_rgbd_dataset_freiburg1_room.mat  Outlier_Ratio_rgbd_dataset_freiburg1_xyz.mat  Outlier_Ratio_rgbd_dataset_freiburg2_desk.mat  Outlier_Ratio_rgbd_dataset_freiburg3_long_office_household.mat  Outlier_Ratio_rgbd_dataset_freiburg3_structure_texture_near_validation.mat  detemine_gt.m  get_Outlier_Ratio_Over_Datasets.m
Methods_Profiling/: RANSAC_Iterations_Profiling_Versus_Outlier_Ratio.m  Rumtime_Profiling.m  align_point_clouds.m  est_rel_pose_1Loop.m  est_rel_pose_2Loops.m  est_rel_pose_3Loops.m  est_rel_pose_classic.m  get_Outlier_Ratio_Over_Datasets.m  get_TUMRGBD_rgb_depth_lists.m  get_outlier_ratio_over_dataset_new.m  load_Outlier_Ratios.m  load_TUMRGBD_Sequence_Data_Pair.m  load_TUMRGBD_Sequence_Data_Pair_From_Img_Names.m  load_TUMRGBD_dataset_sequence.m  method_2Loops.m  method_3Loops.m  method_classic.m  visualize_cumulative_RANSAC_Iterations.m
Methods_Profiling/Outlier_Ratios/: Outlier_Ratio_rgbd_dataset_freiburg1_desk.mat  Outlier_Ratio_rgbd_dataset_freiburg1_room.mat  Outlier_Ratio_rgbd_dataset_freiburg1_xyz.mat  Outlier_Ratio_rgbd_dataset_freiburg2_desk.mat  Outlier_Ratio_rgbd_dataset_freiburg3_long_office_household.mat  Outlier_Ratio_rgbd_dataset_freiburg3_structure_texture_near_validation.mat
Methods_Profiling/pose_estimation_errs/: pose_estimation_err_2Loops.mat  pose_estimation_err_3Loops.mat  (+1 more)
Visualization/: load_tum_office.m  radil_curves.m  surface_inter_curves.m
cmd/: CMakeLists.txt  main_VO.cpp
config/: tum.yaml
establishing_gt/: establish_gt_algo_new.m  test_established_gt.m
include/: Dataset.h  Frame.h  MotionTracker.h  Pipeline.h  definitions.h  utility.h
src/: CMakeLists.txt  Dataset.cpp  Frame.cpp  MotionTracker.cpp  Pipeline.cpp  utility.cpp
test/: CMakeLists.txt  test_functions.cpp
(+17 files in other folders)
